--- a/Legal.html
+++ b/Legal.html
@@ -14,37 +14,30 @@
 </head>
 
 <body class="infopage">
-    <h1 class="center">
-        <img src="res/StatblockWizard.png" width="32" height="32" class="homelink" title="StatblockWizard logo"
-            alt="A square logo featuring the letters SW, styled as a miniature stat block.">
-        StatblockWizard
-    </h1>
+    <h1 class="center"><img src="res/StatblockWizard.png" width="32" height="32" class="homelink"
+            title="StatblockWizard logo"
+            alt="A square logo featuring the letters SW, styled as a miniature stat block.">StatblockWizard</h1>
     <p class="center">&copy;2023, 2025 <a href="mailto:statblockwizard@gmail.com">StatblockWizard</a></p>
     <p class="center">No part of this work may be copied without written permission.</p>
-
     <p>You are free to use the stat blocks you create using <span class="appname">StatblockWizard</span> in any legal
-        way
-        you like under <a target="_blank" href="https://company.wizards.com/en/legal/fancontentpolicy">Wizards of
+        way you like under <a target="_blank" href="https://company.wizards.com/en/legal/fancontentpolicy">Wizards of
             the Coast's Fan Content Policy</a>; attribution to <span class="appname">StatblockWizard</span> is not
         required but is appreciated.</p>
     <p>If you use the stat blocks in ways not covered by the Fan Content Policy, attribute <span
             class="appname">StatblockWizard</span> by adding a text similar to: <span class="center">Stat blocks were
             created using StatblockWizard (https://statblockwizard.github.io)</span></p>
     <p>In any case, you are responsible for what you publish. <span class="appname">StatblockWizard</span> will not
-        accept any liability.
-    </p>
-
-    <p><span class="appname">StatblockWizard</span> runs completely in your browser, on your device. It is best
-        used on desktop/laptop computers, and may not entirely look great on small screens. Also, the quality of the
-        exported images is usually lower on mobile devices.</p>
-    <p>Your last created or uploaded stat block will be stored in your browser's local data storage. The
-        data will not be sent anywhere, and no other data will be stored or collected by this app, ever.</p>
+        accept any liability.</p>
+    <p><span class="appname">StatblockWizard</span> runs completely in your browser, on your device. It is best used on
+        desktop/laptop computers, and may not entirely look great on small screens. Also, the quality of the exported
+        images is usually lower on mobile devices.</p>
+    <p>Your last created or uploaded stat block will be stored in your browser's local data storage. The data will not
+        be sent anywhere, and no other data will be stored or collected by this app, ever.</p>
     <p><span class="appname">StatblockWizard</span> does not guarantee that exported JSON files will be supported
         forever, but since they use a proprietary format we will certainly try...</p>
     <hr>
     <p class="note">This work includes material taken from the System Reference Document 5.1 (“SRD 5.1”) by Wizards of
-        the Coast LLC
-        and available at <a target="_blank"
+        the Coast LLC and available at <a target="_blank"
             href="https://dnd.wizards.com/resources/systems-reference-document">https://dnd.wizards.com/resources/systems-reference-document</a>.
         The SRD 5.1 is licensed under the Creative Commons Attribution 4.0 International License available at <a
             target="_blank"
