--- a/2024Creator.html
+++ b/2024Creator.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-    <title>StatblockWizard Creator</title>
+    <title>StatblockWizard Creator - type your 2024 monster stat block</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="robots" content="noindex">
