Set backgrounf on 512 favicon to white, fix image use in index and legal

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         stat block', below. There, you will see a demo stat block that shows what actions are available. You can then proceed
         to the Creator to start creating or editing your stat block.</p>
 
-    <p>Clicking the <span class="appname">StatblockWizard</span> logo <img src="favicon.ico" class="inlinefavicon"
+    <p>Clicking the <span class="appname">StatblockWizard</span> logo <img src="res/StatblockWizard.png" class="inlinefavicon"
             title="StatblockWizard logo"
             alt="A square logo featuring the letters SW, styled as a miniature stat block.">&nbsp;&mdash;in the top of
         any page&mdash;&nbsp;will bring you back here.</p>
