Update after SRD5.2 release

--- a/Legal.html
+++ b/Legal.html
@@ -43,6 +43,12 @@
             target="_blank"
             href="https://creativecommons.org/licenses/by/4.0/legalcode">https://creativecommons.org/licenses/by/4.0/legalcode</a>.
     </p>
+    <p class="note">This work includes material from the System Reference Document 5.2 (“SRD 5.2”) by Wizards of the
+        Coast LLC, available at <a target="_blank"
+            href="https://www.dndbeyond.com/srd">https://www.dndbeyond.com/srd</a>. The SRD 5.2 is licensed under the
+        Creative Commons Attribution 4.0 International License, available at <a target="_blank"
+            href="https://creativecommons.org/licenses/by/4.0/legalcode">https://creativecommons.org/licenses/by/4.0/legalcode</a>.
+    </p>
     <p class="note">The fonts used in the stat block are licensed under the SIL Open Font License. All relevant
         information is in this file: <a target="_blank" href="./res//OFL.txt">OFL.txt</a></p>
 </body>
