--- a/2024Viewer.html
+++ b/2024Viewer.html
@@ -31,7 +31,7 @@
     </noscript>
     <div id="StatblockWizardViewer"></div>
     <br>
-    <div class="center"><label for="colorpicker">Select a background color:</label>&nbsp;<input type="color" id="colorpicker" value="#ffffff" onchange="document.body.style.backgroundColor=this.value;" title="Selecting a background color helps when choosing the transparency setting."></div>
+    <div class="center"><label for="colorpicker">Background color for transparency testing:</label>&nbsp;<input type="color" id="colorpicker" value="#ffffff" onchange="document.body.style.backgroundColor=this.value;" title="Selecting a background color helps when choosing the transparency setting. This color is not part of the stat block."></div>
     <img id="svgimg" style="display: none;" title="svgimg" alt="placeholder for svg file creation">
 </body>
 
