--- a/Legal.html
+++ b/Legal.html
@@ -30,7 +30,7 @@
         accept any liability.</p>
     <p><span class="appname">StatblockWizard</span> runs completely in your browser, on your device. It is best used on
         desktop/laptop computers, and may not entirely look great on small screens. Also, the quality of the exported
-        images is usually lower on mobile devices.</p>
+        images can differ depending on the used device and browser.</p>
     <p>Your last created or uploaded stat block will be stored in your browser's local data storage. The data will not
         be sent anywhere, and no other data will be stored or collected by this app, ever.</p>
     <p><span class="appname">StatblockWizard</span> does not guarantee that exported JSON files will be supported
